# trajectory_replay

./: README.md  joint_states.csv  poses.csv  repos.yml  rosbag_to_csv.py  rosbag_to_discrete_trajectory.py
23_02_10_5_minutes_hand_guiding/: metadata.yaml
rosbag2_2023_02_01-09_33_20/: metadata.yaml
rosbag2_2023_02_01-11_21_54/: metadata.yaml  rosbag2_2023_02_01-11_21_54_0.db3
rosbag2_2023_02_03-16_37_20/: metadata.yaml
trajectory_recording/: CMakeLists.txt  package.xml
trajectory_recording/config/: config.rviz
trajectory_recording/launch/: trajectory_recording.launch.py
trajectory_recording/scripts/: impedance_control_node.py  link_transform_publisher_node.py
trajectory_replay/: CMakeLists.txt  data.csv  moveit_interface_node.cpp  package.xml
trajectory_replay/launch/: joint_trajectory_client_node.launch.py  moveit_interface_node.launch.py
trajectory_replay/scripts/: joint_trajectory_client_node.py  move_group_action_client_node.py  moveit_action.py
trajectory_replay_msgs/: CMakeLists.txt  package.xml
trajectory_replay_msgs/srvs/: Pose.srv
