<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_replay</name>
  <version>1.0.0</version>
  <description>Replaying trajectories from a list of poses via moveit.</description>
  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_replay_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
